--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .navbar-menu-item {
+    @apply flex justify-center items-center w-12 h-12 text-gray-800
+    rounded-full border border-gray-800 hover:bg-gray-800 hover:text-slate-50 transition-colors
+  }
+
+  .navbar-menu-item-active {
+    @apply border-gray-300
+  }
+
+  .postcard-image {
+    @apply h-64 bg-center bg-cover
+  }
+}
+
 html, body {
   font-family: "Lato", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
