--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -15,6 +15,10 @@
   .postcard-image {
     @apply h-64 bg-center bg-cover
   }
+
+  .timestamp {
+    @apply text-xs italic text-gray-400
+  }
 }
 
 html, body {
