--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -22,5 +22,5 @@
 }
 
 html, body {
-  font-family: "Lato", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
 }
