--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -2,38 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+:root {
+  --header-height: 80px;
+  --header-margin-bottom: 2rem;
+}
+
 @layer components {
   .navbar-menu-item {
-    @apply flex justify-center items-center w-12 h-12 text-gray-800
-    rounded-full border border-gray-800 hover:bg-gray-800 hover:text-slate-50 transition-colors
+    @apply flex justify-center items-center w-8 h-8 text-gray-800
+    rounded-full border border-gray-800 transition-all hover:navbar-menu-item-hover;
+  }
+
+  .navbar-menu-item-hover {
+    @apply  navbar-menu-item-active;
   }
 
   .navbar-menu-item-active {
-    @apply border-gray-300
+    @apply bg-gray-800 text-slate-50 scale-110;
   }
 
   .postcard-image {
-    @apply h-64 bg-center bg-cover
+    @apply h-64 bg-center bg-cover;
   }
 
   .timestamp {
-    @apply text-xs italic text-gray-400
+    @apply text-xs italic text-gray-400;
   }
 
   .label {
     @apply absolute label-active peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0
-    top-2 left-0 pl-2 transition-transform origin-top-left pointer-events-none
+    top-2 left-0 pl-2 transition-transform origin-top-left pointer-events-none;
   }
 
   .label-active {
-    @apply scale-75 -translate-y-6
+    @apply scale-75 -translate-y-6;
   }
 
   .textarea[data-value=""] ~ .label {
-    @apply scale-100 translate-y-0
+    @apply scale-100 translate-y-0;
   }
-}
-
-html, body {
-  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
 }
